<resources>
    <string name="app_name">Jackson\'Skin</string>
    <string name="user">User</string>
    <string name="logo">logo</string>
    <string name="userAcces">User</string>
    <string name="passwordAcess">Pass</string>
    <string name="login">Login</string>
    <string name="nome">nome</string>
    <string name="email">Email</string>
    <string name="Senha">Senha</string>
    <string name="sexo">Sexo</string>
    <string name="forgot_pass">Não Tenho Cadastro</string>
    <string name="ok">Ok</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="TitleProd">PRODUTOS</string>
    <string name="carrinho">Carrinho</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="pedidos">Pedidos</string>
    <string name="logout">Logout</string>
    <string name="cpf">Cpf</string>
    <string name="Rg">Rg</string>
    <string name="Cep">Cep</string>
    <string name="Clientes">Clientes</string>
    <string name="Produtos">Produtos</string>
    <string name="Estoque">Estoque</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <string name="bt_mais">+</string>
</resources>
