<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FormC.FormCliente">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/im_foto_Adm"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#00A8ec"
                    android:src="@drawable/person" />

                <ImageButton
                    android:id="@+id/bt_foto_Adm"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_camera_alt_white_24dp"
                    android:textSize="40sp" />
            </RelativeLayout>


            <EditText
                android:id="@+id/nome_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/email_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/senha_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Senha"
                android:paddingStart="10dp"/>
            <EditText
                android:id="@+id/cpf_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:paddingStart="10dp"/>
            <EditText
                android:id="@+id/rg_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rg"
                android:paddingStart="10dp"/>
            <EditText
                android:id="@+id/cep_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cep"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/sexo_id_adm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sexo"
                android:paddingStart="10dp"/>

            <RatingBar
                android:id="@+id/nota_id_adm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="10"
                android:numStars="5" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>