<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.crud.ClientesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nome_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome" />

        <TextView
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/senha_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha" />

        <TextView
            android:id="@+id/sexo_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sexo" />

        <RatingBar
            android:id="@+id/nota_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="10"
            android:numStars="5" />
    </LinearLayout>

    </android.support.constraint.ConstraintLayout>