<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacksonskin.views.login.loginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout

        android:id="@+id/login_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/grey"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/grey"

            android:hint="@string/login"
            android:text=""
            android:textAllCaps="false"
            android:textColorHint="@color/bg_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nCadastrado" />

        <EditText
            android:id="@+id/edt_login_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:hint="@string/userAcces"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text=""
            android:textColor="@color/bg_page"
            android:textColorHint="@color/lightGrey"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_logo" />

        <TextView
            android:id="@+id/tv_nCadastrado"
            style="@style/Base.AlertDialog.AppCompat.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forgot_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_login_password"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shapes"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:hint="@string/passwordAcess"
            android:inputType="textPassword"

            android:paddingStart="16dp"
            android:paddingLeft="16dp"

            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:text=""

            android:textColor="@color/bg_page"
            android:textColorHint="@color/lightGrey"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_login_user" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>

</android.support.constraint.ConstraintLayout>